# jeprum

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  getting-started.md  rules.md
examples/: api_agent_budget.py  basic_demo.py  filesystem_agent.py  mcp_client.py  mcp_client_with_jeprum.py  mcp_server.py  multi_agent_live.py  multi_agent_simulation.py  run_multiple_agents.py
src/jeprum/: __init__.py  core.py  exceptions.py  interceptor.py  models.py  rules.py  transport.py
tests/: test_interceptor.py  test_rules.py
