[project]
name = "jeprum"
version = "0.1.0"
description = "The live control room for AI agents — see everything, set rules, stop anything"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Jithendra Siddartha"}]
keywords = ["ai", "agents", "monitoring", "governance", "mcp", "guardrails", "observability", "control-plane"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://jeprum.com"
Repository = "https://github.com/jeprum/jeprum"
Documentation = "https://github.com/jeprum/jeprum/tree/main/docs"
Issues = "https://github.com/jeprum/jeprum/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/jeprum"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
